Add Contact and About pages

--- a/Stage 0/index.html
+++ b/Stage 0/index.html
@@ -9,7 +9,12 @@
   <body>
     <article data-testid="text-profile-card">
       <header>
-        <!-- <h1 data-testid="test-profile-header">Profile Card</h1> -->
+        
+        <nav class="navbar">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Me</a>
+          <a href="contact.html">Contact Us</a>
+        </nav>
       </header>
 
       <figure>
