--- a/Stage 0/contact.html
+++ b/Stage 0/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
+    <article data-testid="test-contact-page">
       <header>
          
          <nav class="navbar">
@@ -83,7 +83,7 @@
         <button type="submit" data-testid="test-contact-submit">Submit</button>
         <p id="success" data-testid="test-contact-success" class="success"></p>
       </form>
-    </main>
+    </article>
 
     <script src="contact.js"></script>
   </body>
