--- a/Stage 0/about.html
+++ b/Stage 0/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <article data-testid="test-about-page">
+    <main data-testid="test-about-page">
       <nav class="navbar">
         <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
@@ -50,6 +50,6 @@
         <h2>Extra Thoughts</h2>
         <p>This program has been an exciting and challenging journey so far.</p>
       </section>
-    </article>
+    </main>
   </body>
 </html>
