Add Contact and About pages

--- a/about.html
+++ b/about.html
@@ -8,24 +8,23 @@
   </head>
   <body>
     <main class="about_page" data-testid="test-about-page">
-     
-
       <h1 class="about">About Me</h1>
-
-      <section  class="about_goals_section"
-        data-testid="test-about-goals-section">
-
+      <section
+        class="about_goals_section"
+        data-testid="test-about-goals-section"
+      >
         <h2>Bio</h2>
         <p data-testid="test-about-goals">
-          Hey there! I’m Alase Samuel Ayo-Oluwa, a curious and creative frontend developer
-          who loves bringing designs to life on the web. I enjoy experimenting
-          with colors, layouts, and code to build things people enjoy using.
+          Hey there! I’m Alase Samuel Ayo-Oluwa, a curious and creative frontend
+          developer who loves bringing designs to life on the web. I enjoy
+          experimenting with colors, layouts, and code to build things people
+          enjoy using.
         </p>
       </section>
 
-      <section class="about_goals_section">
+      <section class="about-goals-section" data-testid="about-goals-section">
         <h2>Goals in this Program</h2>
-        <ul data-testid="test-about-goals-list" >
+        <ul data-testid="test-about-goals-list">
           <li>Master Core Web Technologies</li>
           <li>Learn Modern Frontend Frameworks</li>
           <li>Improve UI/UX Design Skills</li>
@@ -36,17 +35,23 @@
 
       <section data-testid="test-about-confidence">
         <h2>Areas of Low Confidence</h2>
-        <p data-testid="test-about-confidence">I need to improve my JavaScript and design consistency.</p>
+        <p data-testid="test-about-confidence">
+          I need to improve my JavaScript and design consistency.
+        </p>
       </section>
 
       <section data-testid="test-about-future-note">
         <h2>Note to Future Self</h2>
-        <p data-testid="test-about-future-note">Keep pushing, learning, and never doubt your progress!</p>
+        <p data-testid="test-about-future-note">
+          Keep pushing, learning, and never doubt your progress!
+        </p>
       </section>
 
       <section data-testid="test-about-extra">
         <h2>Extra Thoughts</h2>
-        <p data-testid="test-about-extra">This program has been an exciting and challenging journey so far.</p>
+        <p data-testid="test-about-extra">
+          This program has been an exciting and challenging journey so far.
+        </p>
       </section>
     </main>
   </body>
